--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #1a1a1a;
+            background: linear-gradient(to bottom, #1a1a1a 40%, #222 100%);
             color: #f5f5f5;
             margin: 0;
             padding: 0;
-            height: 100vh;
-            overflow: hidden;
+            min-height: 100vh;
             display: flex;
             flex-direction: column;
+            justify-content: space-between;
+        }
+        a {
+            text-decoration: none;
+            color: inherit;
         }
 
         .topbar {
@@ -66,8 +70,9 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 20px;
+            padding: 40px;
             text-align: center;
+            background-color: #1a1a1a;
         }
 
         .content p {
@@ -78,9 +83,9 @@
         #icon {
             display: block;
             margin: 20px auto;
-            width: 300px;
-            height: 300px;
-            border-radius: 20px;
+            width: 250px;
+            height: 250px;
+            border-radius: 50%;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
         }
 
@@ -88,55 +93,81 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 20px 0;
+            margin: 30px 0;
         }
 
         .play-button {
             text-decoration: none;
-            background-color: #28a745;
+            background: linear-gradient(145deg, #28a745, #218838);
             color: #fff;
-            padding: 15px 30px;
+            padding: 10px 20px;
             font-size: 2em;
             border-radius: 50px;
-            transition: background-color 0.3s, transform 0.2s;
+            border: 2px solid #1e7e34;
+            transition: background 0.3s, transform 0.2s;
         }
 
         .play-button:hover {
-            background-color: #218838;
-            transform: translateY(-3px);
+            background: linear-gradient(145deg, #218838, #28a745);
+            transform: translateY(-5px);
         }
 
-        .image-container {
-            position: relative;
-            display: inline-block;
-        }
-
-        .image-container img {
-            width: 100px;
-            height: auto;
-            border-radius: 20%;
-        }
-
-        .tooltip {
-            visibility: hidden;
-            width: calc(100% - 25px);
-            background-color: rgba(34, 34, 34, 0.8);
-            color: #fff;
+        .featured-games {
+            background-color: #222;
+            padding: 40px;
             text-align: center;
-            border-radius: 15px;
-            padding: 3px;
-            position: absolute;
-            bottom: 5px;
-            left: 50%;
-            transform: translateX(-50%);
-            opacity: 0;
-            transition: opacity 0.3s;
-            font-size: 0.8em;
         }
 
-        .image-container:hover .tooltip {
-            visibility: visible;
-            opacity: 1;
+        .featured-games h2 {
+            font-size: 2.2em;
+            margin-bottom: 30px;
+        }
+
+        .game-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+        }
+
+        .game-card {
+            background-color: #333;
+            padding: 20px;
+            border-radius: 15px;
+            transition: transform 0.2s;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+
+        .game-card:hover {
+            transform: scale(1.05);
+        }
+
+        .game-card img {
+            width: 100%;
+            border-radius: 10px;
+        }
+
+        .game-card h3 {
+            margin: 15px 0;
+            font-size: 1.5em;
+        }
+
+        .footer {
+            background-color: #222;
+            text-align: center;
+            padding: 20px;
+            color: #aaa;
+        }
+
+        @media (max-width: 768px) {
+            .play-button {
+                padding: 15px 30px;
+                font-size: 1.5em;
+            }
+
+            #icon {
+                width: 200px;
+                height: 200px;
+            }
         }
     </style>
 </head>
@@ -159,6 +190,33 @@
 
     <div class="play-button-container">
         <a href="./Games.html" class="play-button">Play</a>
+    </div>
+
+    <div class="featured-games">
+        <h2>Featured Games</h2>
+        <div class="game-grid">
+            <div class="game-card">
+                <a href="./Games/game.html?game=Monkey%20Mart">
+                    <img src="./img/monkey.jpeg" alt="Game 1">
+                    <p>Play as a monkey making a store</p>
+                </a>
+            </div>
+            <div class="game-card">
+                <a href="./Games/game.html?game=Bit%20Plane">
+                    <img src="./img/plane.jpg" alt="Game 2">
+                    <p>Play an awesome plane fighting game</p>
+                </a>
+            </div>
+            <div class="game-card">
+                <a href="./game.html?game=Subway%20Surfers">
+                    <img src="./img/game3.png" alt="Game 3">
+                    <p>Play Subway Surfers!</p>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
     </div>
 </body>
 </html>
