--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom, #1a1a1a 40%, #222 100%);
+            background: #1a1a1a;
             color: #f5f5f5;
             margin: 0;
             padding: 0;
@@ -113,7 +113,7 @@
         }
 
         .featured-games {
-            background-color: #222;
+            background-color: #1a1a1a;
             padding: 40px;
             text-align: center;
         }
@@ -152,7 +152,7 @@
         }
 
         .footer {
-            background-color: #222;
+            background-color: #1a1a1a;
             text-align: center;
             padding: 20px;
             color: #aaa;
