--- a/index.html
+++ b/index.html
@@ -130,11 +130,17 @@
         }
 
         .game-card {
+            width: 200px; /* Set a fixed width */
+            height: 200px; /* Set a fixed height to make it square */
             background-color: #333;
             padding: 10px;
             border-radius: 15px;
             transition: transform 0.2s;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center; /* Center align content */
         }
 
         .game-card:hover {
@@ -142,7 +148,8 @@
         }
 
         .game-card img {
-            width: 100%; /* Make images responsive */
+            width: 100%; /* Make images fill the card */
+            height: auto; /* Maintain aspect ratio */
             max-height: 150px; /* Set a maximum height for images */
             border-radius: 10px;
             object-fit: cover; /* Maintain aspect ratio */
@@ -163,6 +170,7 @@
             border-radius: 15px;
             transition: background-color 0.3s, transform 0.2s;
             text-align: center;
+            width: 100%; /* Make link fill the card */
         }
 
         .game-card a:hover {
@@ -186,6 +194,11 @@
             #icon {
                 width: 200px;
                 height: 200px;
+            }
+
+            .game-card {
+                width: 100%; /* Make game cards responsive on smaller screens */
+                height: auto; /* Allow height to adjust */
             }
         }
     </style>
@@ -239,6 +252,7 @@
     </div>
 
     <div class="footer">
+        &copy; 2024 Void's Games
     </div>
 </body>
 </html>
