--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         .game-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px; /* Adjust this value for spacing between cards */
+            gap: 10px; /* Reduced spacing between cards */
             justify-items: center; /* Center items in the grid */
         }
 
@@ -134,7 +134,7 @@
             width: 200px; /* Set a fixed width */
             height: 200px; /* Set a fixed height to make it square */
             background-color: #333;
-            padding: 10px;
+            padding: 5px; /* Reduced padding to bring content closer */
             border-radius: 15px;
             transition: transform 0.2s;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -142,7 +142,6 @@
             flex-direction: column;
             justify-content: center;
             align-items: center; /* Center align content */
-            /* Removed margin to use grid gap for spacing */
         }
 
         .game-card:hover {
@@ -158,7 +157,7 @@
         }
 
         .game-card h3 {
-            margin: 15px 0;
+            margin: 10px 0; /* Adjusted margin for titles */
             font-size: 1.5em;
         }
 
