--- a/index.html
+++ b/index.html
@@ -124,16 +124,15 @@
         }
 
         .game-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 0; /* No spacing between cards */
+            display: flex; /* Changed to flexbox */
+            justify-content: center; /* Center items */
+            flex-wrap: wrap; /* Allow wrapping */
         }
 
         .game-card {
             width: 200px; /* Set a fixed width */
             height: 200px; /* Set a fixed height to make it square */
             background-color: #333;
-            padding: 0; /* Remove padding */
             margin: 0; /* Remove margin */
             border-radius: 15px;
             transition: transform 0.2s;
