--- a/Games.html
+++ b/Games.html
@@ -1,169 +1,134 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Void's Games</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #1a1a1a;
-            color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-            height: 100vh; 
-            overflow: hidden; 
-            display: flex;
-            flex-direction: column;
-        }
+<style>
+    /* Main body style */
+    body {
+        font-family: 'Arial', sans-serif;
+        background-color: #1a1a1a;
+        color: #f5f5f5;
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+    }
 
-        .topbar {
-            background-color: #222;
-            padding: 20px;
-            text-align: center;
-            border-bottom: 2px solid #444;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
+    /* Top bar */
+    .topbar {
+        background-color: #222;
+        padding: 20px;
+        text-align: center;
+        border-bottom: 2px solid #444;
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+    }
 
-        .topbar h1 {
-            margin: 0;
-            font-size: 2.5em;
-            color: #f5f5f5;
-        }
-        
-        .nav-buttons {
-            margin-top: 10px;
-        }
+    .topbar h1 {
+        margin: 0;
+        font-size: 2.5em;
+        color: #f5f5f5;
+    }
 
-        .nav-button, .nav-button2 {
-            text-decoration: none;
-            background-color: #333;
-            border: none;
-            color: #fff;
-            padding: 10px 20px;
-            margin: 5px;
-            cursor: pointer;
-            font-size: 1em;
-            border-radius: 30px;
-            transition: background-color 0.3s, transform 0.2s;
-        }
+    .nav-buttons {
+        margin-top: 10px;
+    }
 
-        .nav-button:hover {
-            background-color: #555;
-            transform: scale(1.05);
-        }
+    /* Main navigation buttons */
+    .nav-button, .nav-button2 {
+        text-decoration: none;
+        background: linear-gradient(145deg, #444, #222);
+        color: #fff;
+        padding: 12px 25px;
+        margin: 5px;
+        border: 2px solid #555;
+        font-size: 1.1em;
+        border-radius: 30px;
+        cursor: pointer;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+        transition: background 0.3s, transform 0.2s, box-shadow 0.3s;
+    }
 
-        .nav-button2 {
-            background-color: #666;
-        }
-        .content {
-            display: flex;
-            flex-wrap: wrap; 
-            justify-content: center; 
-            padding: 20px;
-            gap: 30px; 
-            flex-grow: 1; 
-            overflow-y: auto; 
-        }
+    /* Hover effect for navigation buttons */
+    .nav-button:hover, .nav-button2:hover {
+        background: linear-gradient(145deg, #555, #333);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.6);
+        transform: translateY(-3px);
+    }
 
-        .game-button {
-            text-decoration: none;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            transition: transform 0.2s;
-        }
+    /* Special styling for the Games button */
+    .nav-button2 {
+        background: linear-gradient(145deg, #666, #444);
+        border: 2px solid #666;
+    }
 
-        .game-button:hover {
-            transform: translateY(-5px); 
-        }
+    /* Game buttons layout */
+    .content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 20px;
+        gap: 30px;
+        flex-grow: 1;
+        overflow-y: auto;
+    }
 
-        .image-container {
-            position: relative;
-            display: inline-block;
-            margin-bottom: 10px; 
-        }
+    /* Individual game button */
+    .game-button {
+        text-decoration: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        transition: transform 0.2s;
+    }
 
-        .image-container img {
-            width: 150px; 
-            height: auto;
-            border-radius: 15px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); 
-            transition: transform 0.2s;
-        }
+    /* Hover effect for game button */
+    .game-button:hover {
+        transform: translateY(-8px);
+    }
 
-        .image-container:hover img {
-            transform: scale(1.05); 
-        }
+    /* Game button image container */
+    .image-container {
+        position: relative;
+        display: inline-block;
+        margin-bottom: 10px;
+    }
 
-        .tooltip {
-            visibility: hidden;
-            width: 150px;
-            background-color: rgba(34, 34, 34, 0.8); 
-            color: #fff;
-            text-align: center;
-            border-radius: 10px;
-            padding: 5px;
-            position: absolute;
-            bottom: 5px; 
-            left: 50%;
-            transform: translateX(-50%);
-            opacity: 0;
-            transition: opacity 0.3s;
-            font-size: 0.8em;
-        }
+    .image-container img {
+        width: 150px;
+        height: auto;
+        border-radius: 20px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+        transition: transform 0.3s, box-shadow 0.3s;
+    }
 
-        .image-container:hover .tooltip {
-            visibility: visible;
-            opacity: 1;
-        }
-    </style>
-</head>
-<body>
-    <div class="topbar">
-        <h1>Void's Games</h1>
-        <div class="nav-buttons">
-            <a href="./" class="nav-button">Home</a>
-            <a href="./Games.html" class="nav-button2">Games</a>
-            <a href="./About.html" class="nav-button">About</a>
-        </div>
-    </div>
-    <div class="content" id="game-buttons-container">
-    </div>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            fetch('/games.json')
-                .then(response => response.json())
-                .then(data => {
-                    const container = document.getElementById('game-buttons-container');
-                    data.gameButtons.forEach(game => {
-                        const gameButton = document.createElement('a');
-                        gameButton.className = 'game-button';
-                        gameButton.href = game.link;
+    /* Hover effect for game image */
+    .image-container:hover img {
+        transform: scale(1.1);
+        box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
+    }
 
-                        const imageContainer = document.createElement('div');
-                        imageContainer.className = 'image-container';
+    /* Tooltip styling */
+    .tooltip {
+        visibility: hidden;
+        width: 150px;
+        background-color: rgba(34, 34, 34, 0.8);
+        color: #fff;
+        text-align: center;
+        border-radius: 10px;
+        padding: 5px;
+        position: absolute;
+        bottom: 5px;
+        left: 50%;
+        transform: translateX(-50%);
+        opacity: 0;
+        transition: opacity 0.3s;
+        font-size: 0.8em;
+    }
 
-                        const img = document.createElement('img');
-                        img.src = game.image;
-                        img.alt = game.text;
-
-                        const tooltip = document.createElement('div');
-                        tooltip.className = 'tooltip';
-                        tooltip.textContent = game.text;
-
-                        imageContainer.appendChild(img);
-                        imageContainer.appendChild(tooltip);
-                        gameButton.appendChild(imageContainer);
-                        container.appendChild(gameButton);
-                    });
-                })
-                .catch(error => console.error('Error loading game buttons:', error));
-        });
-    </script>
-</body>
-</html>
+    /* Show tooltip on hover */
+    .image-container:hover .tooltip {
+        visibility: visible;
+        opacity: 1;
+    }
+</style>
