--- a/game.html
+++ b/game.html
@@ -45,12 +45,14 @@
             padding: 10px 20px;
             margin: 5px;
             border-radius: 30px;
-            transition: background-color 0.3s, transform 0.2s;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
         }
 
         .nav-button:hover {
             background-color: #555;
             transform: scale(1.05);
+            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.5);
         }
 
         .content {
@@ -68,13 +70,17 @@
             height: 60vh;
             margin-bottom: 20px;
             position: relative;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+            border-radius: 15px;
+            overflow: hidden;
         }
 
         iframe {
             width: 100%;
             height: 100%;
-            border: 2px solid #444;
+            border: 2px solid #555;
             border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
         }
 
         .fullscreen-button {
