--- a/game.html
+++ b/game.html
@@ -66,21 +66,25 @@
         }
 
         .iframe-container {
-            width: 80%;
-            height: 60vh;
+            width: 90%;
+            height: 80vh;
             margin-bottom: 20px;
             position: relative;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
-            border-radius: 15px;
+            border-radius: 20px;
             overflow: hidden;
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+            border: 2px solid rgba(255, 255, 255, 0.3);
         }
 
         iframe {
             width: 100%;
             height: 100%;
-            border: 2px solid #555;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+            border: 4px solid #00bfff; /* Glowing border effect */
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0, 191, 255, 0.5), inset 0 0 15px rgba(0, 191, 255, 0.7);
+            background: rgba(0, 0, 0, 0.7); /* Adds a semi-transparent dark background to the iframe */
         }
 
         .fullscreen-button {
