--- a/game.html
+++ b/game.html
@@ -65,43 +65,59 @@
             padding: 20px;
         }
 
+        /* Cool and Fancy Iframe Container */
         .iframe-container {
             width: 90%;
             height: 80vh;
-            margin-bottom: 20px;
             position: relative;
+            background: linear-gradient(135deg, rgba(0, 0, 0, 0.3), rgba(255, 255, 255, 0.1));
             border-radius: 20px;
-            overflow: hidden;
-            background: rgba(255, 255, 255, 0.05);
+            padding: 10px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.7);
             backdrop-filter: blur(10px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
-            border: 2px solid rgba(255, 255, 255, 0.3);
+            border: 2px solid rgba(255, 255, 255, 0.2);
+            overflow: hidden;
         }
 
+        /* Neon Glow and Animated Border */
         iframe {
             width: 100%;
             height: 100%;
-            border: 4px solid #00bfff; /* Glowing border effect */
+            border: none;
             border-radius: 15px;
-            box-shadow: 0 4px 20px rgba(0, 191, 255, 0.5), inset 0 0 15px rgba(0, 191, 255, 0.7);
-            background: rgba(0, 0, 0, 0.7); /* Adds a semi-transparent dark background to the iframe */
+            background: rgba(0, 0, 0, 0.8);
+            box-shadow: 0 0 15px rgba(0, 191, 255, 0.5), 0 0 30px rgba(0, 191, 255, 0.5);
+            animation: glowing-border 3s infinite alternate;
         }
 
+        @keyframes glowing-border {
+            0% {
+                box-shadow: 0 0 20px rgba(0, 191, 255, 0.7), 0 0 40px rgba(0, 191, 255, 0.4);
+            }
+            100% {
+                box-shadow: 0 0 60px rgba(0, 191, 255, 1), 0 0 80px rgba(0, 191, 255, 0.8);
+            }
+        }
+
+        /* Fullscreen Button */
         .fullscreen-button {
             position: absolute;
-            bottom: 10px;
-            right: 10px;
-            width: 40px; 
-            height: 40px;
-            background-image: url('./img/fullscreen.png'); 
+            bottom: 15px;
+            right: 15px;
+            width: 45px;
+            height: 45px;
+            background-image: url('./img/fullscreen.png');
             background-size: cover;
-            border: none;
+            background-color: rgba(255, 255, 255, 0.3);
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            border-radius: 50%;
             cursor: pointer;
-            transition: transform 0.2s;
+            transition: transform 0.3s, box-shadow 0.3s;
         }
 
         .fullscreen-button:hover {
             transform: scale(1.1);
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
         }
     </style>
 </head>
