--- a/game.html
+++ b/game.html
@@ -65,59 +65,59 @@
             padding: 20px;
         }
 
-        /* Cool and Fancy Iframe Container */
+        /* Light Blue and Fancy Iframe Container */
         .iframe-container {
             width: 90%;
             height: 80vh;
             position: relative;
-            background: linear-gradient(135deg, rgba(0, 0, 0, 0.3), rgba(255, 255, 255, 0.1));
+            background: linear-gradient(135deg, rgba(135, 206, 250, 0.3), rgba(255, 255, 255, 0.1));
             border-radius: 20px;
             padding: 10px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.7);
             backdrop-filter: blur(10px);
-            border: 2px solid rgba(255, 255, 255, 0.2);
+            border: 2px solid rgba(135, 206, 250, 0.2);
             overflow: hidden;
         }
 
-        /* Neon Glow and Animated Border */
+        /* Light Blue Neon Glow and Animated Border */
         iframe {
             width: 100%;
             height: 100%;
             border: none;
             border-radius: 15px;
             background: rgba(0, 0, 0, 0.8);
-            box-shadow: 0 0 15px rgba(0, 191, 255, 0.5), 0 0 30px rgba(0, 191, 255, 0.5);
+            box-shadow: 0 0 15px rgba(135, 206, 250, 0.5), 0 0 30px rgba(135, 206, 250, 0.5);
             animation: glowing-border 3s infinite alternate;
         }
 
         @keyframes glowing-border {
             0% {
-                box-shadow: 0 0 20px rgba(0, 191, 255, 0.7), 0 0 40px rgba(0, 191, 255, 0.4);
+                box-shadow: 0 0 20px rgba(135, 206, 250, 0.7), 0 0 40px rgba(135, 206, 250, 0.4);
             }
             100% {
-                box-shadow: 0 0 60px rgba(0, 191, 255, 1), 0 0 80px rgba(0, 191, 255, 0.8);
+                box-shadow: 0 0 60px rgba(135, 206, 250, 1), 0 0 80px rgba(135, 206, 250, 0.8);
             }
         }
 
-        /* Fullscreen Button */
+        /* Square Fullscreen Button */
         .fullscreen-button {
             position: absolute;
             bottom: 15px;
             right: 15px;
-            width: 45px;
-            height: 45px;
+            width: 50px; /* Larger square size */
+            height: 50px;
             background-image: url('./img/fullscreen.png');
             background-size: cover;
             background-color: rgba(255, 255, 255, 0.3);
-            border: 2px solid rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
+            border: 2px solid rgba(135, 206, 250, 0.3);
+            border-radius: 5px; /* Square shape with slightly rounded corners */
             cursor: pointer;
             transition: transform 0.3s, box-shadow 0.3s;
         }
 
         .fullscreen-button:hover {
             transform: scale(1.1);
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
+            box-shadow: 0 0 15px rgba(135, 206, 250, 0.6);
         }
     </style>
 </head>
